--- a/.ci_support/linux_python2.7r_base3.5.1.yaml
+++ b/.ci_support/linux_python2.7r_base3.5.1.yaml
@@ -2,16 +2,16 @@ channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+docker_image:
+- condaforge/linux-anvil-comp7
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
-  vc:
-    max_pin: x
+  r-base:
+    min_pin: x.x
+    max_pin: x.x
 python:
-- '3.7'
-vc:
-- '14'
-zip_keys:
-- - python
-  - vc
+- '2.7'
+r_base:
+- 3.5.1
