--- a/.ci_support/linux_python2.7r_base3.6.yaml
+++ b/.ci_support/linux_python2.7r_base3.6.yaml
@@ -8,5 +8,10 @@ pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
+  r-base:
+    min_pin: x.x
+    max_pin: x.x
 python:
+- '2.7'
+r_base:
 - '3.6'
