--- a/.ci_support/osx_python3.6r_base3.5.1.yaml
+++ b/.ci_support/osx_python3.6r_base3.5.1.yaml
@@ -12,5 +12,10 @@ pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
+  r-base:
+    min_pin: x.x
+    max_pin: x.x
 python:
-- '3.7'
+- '3.6'
+r_base:
+- 3.5.1
