--- a/.ci_support/win_python3.6r_base3.5.1vc14.yaml
+++ b/.ci_support/win_python3.6r_base3.5.1vc14.yaml
@@ -2,11 +2,21 @@ channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
-docker_image:
-- condaforge/linux-anvil-comp7
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
+  r-base:
+    min_pin: x.x
+    max_pin: x.x
+  vc:
+    max_pin: x
 python:
-- '2.7'
+- '3.6'
+r_base:
+- 3.5.1
+vc:
+- '14'
+zip_keys:
+- - python
+  - vc
