--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.6r_base3.5.1vc14.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.6r_base3.5.1vc14.yaml
@@ -1,7 +1,15 @@
+c_compiler:
+- vs2015
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- vs2015
+fortran_compiler:
+- flang
+fortran_compiler_version:
+- '5'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -14,9 +22,11 @@ pin_run_as_build:
 python:
 - '3.6'
 r_base:
-- '3.6'
+- 3.5.1
 vc:
 - '14'
 zip_keys:
 - - python
   - vc
+  - c_compiler
+  - cxx_compiler
