Adds nlme as dependency in meta.yaml

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,12 +22,14 @@ requirements:
     - pip
     - python
     - r-base
+    - r-nlme
   run:
     - matplotlib
     - python
     - rpy2  # [not win]
     - rpy2 <3.0  # [win]
     - r-base
+    - r-nlme
 
 test:
   imports:
