--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,8 @@ source:
 
 build:
   number: 6
-  skip: True  # [(win and (vc < 14 or py38))]
+  skip: True  # [(win and vc < 14)]
+  skip: True  # [(win and py>=38)]
   
 requirements:
   build:
