--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
   host:
     - pip
     - python
-    - r-base  # [not osx]
+    - r-base >=3.6.0  # [not osx]
     - r-nlme  # [not osx]
     - r-biocmanager
   run:
@@ -30,7 +30,8 @@ requirements:
     - python
     - rpy2  # [not win]
     - rpy2 <3.0  # [win]
-    - r-base
+    - r-base >=3.6.0  # [not osx]
+    - r-base # [osx]
     - r-nlme
     - r-biocmanager
 
