--- a/.ci_support/linux_python3.7.yaml
+++ b/.ci_support/linux_python3.7.yaml
@@ -1,32 +1,24 @@
 c_compiler:
-- vs2015
+- gcc
+c_compiler_version:
+- '7'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- vs2015
+- gxx
+cxx_compiler_version:
+- '7'
+docker_image:
+- condaforge/linux-anvil-comp7
 fortran_compiler:
-- flang
+- gfortran
 fortran_compiler_version:
-- '5'
+- '7'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
-  r-base:
-    min_pin: x.x
-    max_pin: x.x
-  vc:
-    max_pin: x
 python:
 - '3.7'
-r_base:
-- 3.5.1
-vc:
-- '14'
-zip_keys:
-- - python
-  - vc
-  - c_compiler
-  - cxx_compiler
