--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.6vc14.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.6vc14.yaml
@@ -1,29 +1,27 @@
 c_compiler:
-- gcc
-c_compiler_version:
-- '7'
+- vs2015
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
-cxx_compiler_version:
-- '7'
-docker_image:
-- condaforge/linux-anvil-comp7
+- vs2015
 fortran_compiler:
-- gfortran
+- flang
 fortran_compiler_version:
-- '7'
+- '5'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
-  r-base:
-    min_pin: x.x
-    max_pin: x.x
+  vc:
+    max_pin: x
 python:
-- '2.7'
-r_base:
 - '3.6'
+vc:
+- '14'
+zip_keys:
+- - python
+  - vc
+  - c_compiler
+  - cxx_compiler
