Changed method of acquiring dependencies and build script

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 1ee490a1b7a0e1164fda08d38053a17f974f82f0237b8c2864bd12a28f3a8efb
 
 build:
-  number: 9
+  number: 10
   skip: True  # [(win and vc < 14)]
   skip: True  # [(win and py>=38)]
   
@@ -25,6 +25,10 @@ requirements:
     - r-base >=3.6.0  # [not osx]
     - r-nlme  # [not osx]
     - r-biocmanager
+    - r-devtools
+    - r-stringi
+    - r-digest
+    - r-mvtnorm
   run:
     - matplotlib-base
     - python
@@ -34,6 +38,9 @@ requirements:
     - r-base # [osx]
     - r-nlme
     - r-biocmanager
+    - r-stringi
+    - r-digest
+    - r-mvtnorm
 
 test:
   imports:
