--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -53,7 +53,7 @@ jobs:
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: condaforge/linux-anvil-comp7
       linux_64_c_compiler_version9cxx_compiler_version9fortran_compiler_version9python3.8.____cpythonr_base4.0:
-
+        CONFIG: linux_64_c_compiler_version9cxx_compiler_version9fortran_compiler_version9python3.8.____cpythonr_base4.0
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: condaforge/linux-anvil-comp7
   timeoutInMinutes: 360
