--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -20,6 +20,12 @@ jobs:
       win_64_python3.7.____cpythonr_base4.0:
         CONFIG: win_64_python3.7.____cpythonr_base4.0
         UPLOAD_PACKAGES: 'True'
+      win_64_python3.8.____cpythonr_base3.6:
+        CONFIG: win_64_python3.8.____cpythonr_base3.6
+        UPLOAD_PACKAGES: 'True'
+      win_64_python3.8.____cpythonr_base4.0:
+        CONFIG: win_64_python3.8.____cpythonr_base4.0
+        UPLOAD_PACKAGES: 'True'
   timeoutInMinutes: 360
   variables:
     CONDA_BLD_PATH: D:\\bld\\
