--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,7 +28,8 @@ requirements:
     - matplotlib-base
     - python
     - rpy2
-    - r-base
+    - r-base  # [not win]
+    - r-base >= 4.0  # [win]
     - r-nlme
     - r-biocmanager
 
