Removed r-base specification

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,8 +29,7 @@ requirements:
     - matplotlib-base
     - python
     - rpy2
-    - r-base  # [not win]
-    - r-base >=4.0  # [win]
+    - r-base
     - r-nlme
     - r-biocmanager
 
