--- a/.ci_support/win_64_python3.6.____cpythonr_base4.0.yaml
+++ b/.ci_support/win_64_python3.6.____cpythonr_base4.0.yaml
@@ -1,13 +1,11 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
-macos_machine:
-- x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.9'
+m2w64_c_compiler:
+- m2w64-toolchain
+m2w64_cxx_compiler:
+- m2w64-toolchain
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -16,6 +14,10 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- '2.7'
+- 3.6.* *_cpython
 r_base:
-- '3.6'
+- '4.0'
+target_platform:
+- win-64
+vc:
+- '14'
