rpy2 should no longer be pinned to older version for windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,8 +40,7 @@ requirements:
   run:
     - matplotlib-base
     - python
-    - rpy2  # [not win]
-    - rpy2 <3.0  # [win]
+    - rpy2
     - r-base
     - r-nlme
     - r-hmisc
